syntax = "proto3";

package io.aurigraph.v11.proto;

import "google/protobuf/timestamp.proto";
import "common.proto";
import "core_types.proto";
import "blockchain.proto";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "ConsensusProto";

/**
 * Consensus Protocol Buffer Definitions
 *
 * This proto file defines all message types for ConsensusServiceImpl gRPC service.
 * Implements HyperRAFT++ consensus with 11 RPC methods for distributed consensus:
 * - proposeBlock()
 * - voteOnBlock()
 * - commitBlock()
 * - getConsensusState()
 * - requestLeaderElection()
 * - heartbeat()
 * - syncState()
 * - getValidatorInfo()
 * - submitConsensusMetrics()
 * - getRaftLog()
 * - streamConsensusEvents()
 */

// ============================================================================
// HyperRAFT++ Consensus State
// ============================================================================

enum ConsensusRole {
  ROLE_UNKNOWN = 0;
  ROLE_LEADER = 1;
  ROLE_CANDIDATE = 2;
  ROLE_FOLLOWER = 3;
}

enum ConsensusPhase {
  PHASE_UNKNOWN = 0;
  PHASE_PROPOSAL = 1;
  PHASE_VOTING = 2;
  PHASE_COMMITMENT = 3;
  PHASE_FINALIZATION = 4;
}

message ConsensusState {
  ConsensusRole current_role = 1;
  ConsensusPhase current_phase = 2;
  int64 current_term = 3;
  string current_leader = 4;
  int32 active_validators = 5;
  int32 required_majority = 6;
  google.protobuf.Timestamp last_heartbeat = 7;
  string state_hash = 8;
}

// ValidatorInfo is defined in blockchain.proto and reused here
// It contains validator metadata and reputation information

// ============================================================================
// Block Proposal & Voting
// ============================================================================

message BlockProposal {
  string block_hash = 1;
  Block block = 2;
  string proposer_id = 3;
  int64 proposal_term = 4;
  int64 proposal_height = 5;
  google.protobuf.Timestamp created_at = 6;
  string proposal_data = 7;
  repeated string validator_voters = 8;
}

message ProposeBlockRequest {
  Block block = 1;
  int64 proposal_term = 2;
  string proposer_id = 3;
  int32 timeout_seconds = 4;
}

message ProposeBlockResponse {
  string block_hash = 1;
  BlockStatus status = 2;
  int32 votes_received = 3;
  int32 votes_required = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message Vote {
  string block_hash = 1;
  string voter_id = 2;
  int64 vote_term = 3;
  bool vote_choice = 4;
  google.protobuf.Timestamp vote_time = 5;
  string vote_signature = 6;
}

message VoteOnBlockRequest {
  string block_hash = 1;
  string voter_id = 2;
  bool vote_choice = 3;
  int64 vote_term = 4;
  string vote_signature = 5;
}

message VoteOnBlockResponse {
  string block_hash = 1;
  bool vote_accepted = 2;
  int32 total_votes = 3;
  int32 votes_needed = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// ============================================================================
// Block Commitment & Finalization
// ============================================================================

message CommitBlockRequest {
  string block_hash = 1;
  Block block = 2;
  int64 commit_term = 3;
  repeated string validator_signatures = 4;
  int32 timeout_seconds = 5;
}

message CommitBlockResponse {
  string block_hash = 1;
  BlockStatus status = 2;
  int64 block_height = 3;
  int32 confirmation_count = 4;
  google.protobuf.Timestamp commit_time = 5;
}

message BlockCommitment {
  string block_hash = 1;
  int64 block_height = 2;
  int64 commit_term = 3;
  repeated string committer_signatures = 4;
  google.protobuf.Timestamp commit_timestamp = 5;
}

// ============================================================================
// Leader Election
// ============================================================================

message LeaderElectionRequest {
  string candidate_id = 1;
  int64 election_term = 2;
  int32 timeout_seconds = 3;
  string election_reason = 4;
}

message LeaderElectionResponse {
  bool election_accepted = 1;
  string new_leader_id = 2;
  int64 election_term = 3;
  int32 votes_received = 4;
  int32 votes_required = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message ElectionVote {
  string candidate_id = 1;
  string voter_id = 2;
  int64 election_term = 3;
  bool vote_choice = 4;
  google.protobuf.Timestamp vote_time = 5;
}

// ============================================================================
// Heartbeat & Health
// ============================================================================

message Heartbeat {
  string leader_id = 1;
  int64 heartbeat_term = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
  google.protobuf.Timestamp heartbeat_time = 5;
}

message HeartbeatRequest {
  string leader_id = 1;
  int64 current_term = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  int64 leader_commit_index = 5;
  int32 timeout_seconds = 6;
}

message HeartbeatResponse {
  string follower_id = 1;
  int64 current_term = 2;
  bool heartbeat_accepted = 3;
  int64 next_log_index = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// ============================================================================
// State Synchronization
// ============================================================================

message SyncStateRequest {
  string node_id = 1;
  int64 current_term = 2;
  int64 last_log_index = 3;
  int32 timeout_seconds = 4;
}

message SyncStateResponse {
  bool sync_successful = 1;
  int64 remote_term = 2;
  int64 remote_log_index = 3;
  repeated LogEntry log_entries = 4;
  string state_snapshot = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  string command = 3;
  bytes data = 4;
  google.protobuf.Timestamp created_at = 5;
}

message StateSnapshot {
  int64 snapshot_index = 1;
  int64 snapshot_term = 2;
  string state_root = 3;
  bytes snapshot_data = 4;
  google.protobuf.Timestamp created_at = 5;
}

// ============================================================================
// Consensus Metrics & Monitoring
// ============================================================================

message ConsensusMetrics {
  double consensus_latency_ms = 1;
  int32 total_validators = 2;
  int32 active_validators = 3;
  int64 total_blocks_committed = 4;
  double average_block_time_ms = 5;
  int32 failed_consensus_attempts = 6;
  double network_health_percent = 7;
  google.protobuf.Timestamp measurement_time = 8;
}

message SubmitConsensusMetricsRequest {
  string validator_id = 1;
  ConsensusMetrics metrics = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SubmitConsensusMetricsResponse {
  bool metrics_accepted = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// ============================================================================
// Raft Log Management
// ============================================================================

message GetRaftLogRequest {
  int64 start_index = 1;
  int64 end_index = 2;
  int32 limit = 3;
}

message RaftLogResponse {
  repeated LogEntry log_entries = 1;
  int64 log_size = 2;
  int64 last_applied_index = 3;
  int64 last_log_term = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// ============================================================================
// Consensus Status Query
// ============================================================================

message GetConsensusStateRequest {
  bool include_validators = 1;
  bool include_metrics = 2;
}

message ConsensusStateResponse {
  ConsensusState state = 1;
  repeated ValidatorInfo validators = 2;
  ConsensusMetrics metrics = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message GetValidatorInfoRequest {
  string validator_id = 1;
}

message ValidatorInfoResponse {
  ValidatorInfo validator = 1;
  double reputation_score = 2;
  int32 blocks_validated = 3;
  int32 failed_validations = 4;
  google.protobuf.Timestamp last_activity = 5;
}

// ============================================================================
// Consensus Event Streaming
// ============================================================================

message StreamConsensusEventsRequest {
  bool include_block_proposals = 1;
  bool include_votes = 2;
  bool include_leader_elections = 3;
  bool include_heartbeats = 4;
  int32 stream_timeout_seconds = 5;
}

message ConsensusEvent {
  string event_type = 1;               // PROPOSAL, VOTE, COMMIT, ELECTION, HEARTBEAT
  string event_id = 2;
  string source_validator = 3;
  int64 event_term = 4;
  bytes event_data = 5;
  string stream_id = 6;
  int64 event_sequence = 7;
  google.protobuf.Timestamp timestamp = 8;
}

message ConsensusEventCompletion {
  string stream_id = 1;
  int64 total_events_streamed = 2;
  google.protobuf.Timestamp completion_time = 3;
  string completion_reason = 4;
}

// ============================================================================
// Service gRPC definition for ConsensusService
// ============================================================================

service ConsensusService {
  rpc proposeBlock(ProposeBlockRequest) returns (ProposeBlockResponse);
  rpc voteOnBlock(VoteOnBlockRequest) returns (VoteOnBlockResponse);
  rpc commitBlock(CommitBlockRequest) returns (CommitBlockResponse);
  rpc requestLeaderElection(LeaderElectionRequest) returns (LeaderElectionResponse);
  rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc syncState(SyncStateRequest) returns (SyncStateResponse);
  rpc getConsensusState(GetConsensusStateRequest) returns (ConsensusStateResponse);
  rpc getValidatorInfo(GetValidatorInfoRequest) returns (ValidatorInfoResponse);
  rpc submitConsensusMetrics(SubmitConsensusMetricsRequest) returns (SubmitConsensusMetricsResponse);
  rpc getRaftLog(GetRaftLogRequest) returns (RaftLogResponse);
  rpc streamConsensusEvents(StreamConsensusEventsRequest) returns (stream ConsensusEvent);
}
